# EvoVulkan

./: .gitignore  .gitmodules  CMakeLists.txt  Example.h  README.md  main.cpp
Core/: CMakeLists.txt  EvoVulkan.cxx
Core/inc/: Device.h  FamilyQueues.h  Framebuffer.h  ImageView.h  Pipeline.h  Surface.h  Swapchain.h  Synchronization.h  VulkanCore.h
Core/inc/EvoVulkan/: DescriptorManager.h  DescriptorSet.h  VmaUsage.h  VulkanKernel.h  include.h  macros.h
Core/inc/EvoVulkan/Complexes/: FrameBufferAttachment.h  FrameBufferLayer.h  Framebuffer.h  Mesh.h  Shader.h
Core/inc/EvoVulkan/Memory/: Allocator.h
Core/inc/EvoVulkan/Tools/: DeviceTools.h  FileSystem.h  NonCopyable.h  Singleton.h  StringUtils.h  SubmitInfo.h  VulkanConverter.h  VulkanDebug.h  VulkanHelper.h  VulkanInitializers.h  VulkanInsert.h  VulkanTools.h
Core/inc/EvoVulkan/Types/: CmdBuffer.h  CmdPool.h  DepthStencil.h  DescriptorPool.h  DescriptorSet.h  Device.h  FamilyQueues.h  Features.h  Framebuffer.h  Image.h  ImageView.h  Instance.h  MultisampleTarget.h  Pipeline.h  RenderPass.h  Surface.h  SwapChainSupportDetails.h  Swapchain.h  Synchronization.h  Texture.h  VmaBuffer.h  VulkanBuffer.h
Core/inc/EvoVulkan/Types/Base/: VulkanObject.h
Core/inc/Tools/: VulkanHelper.h  VulkanTools.h
Core/src/: CmdBuffer.cpp  DepthStencil.cpp  Device.cpp  FamilyQueues.cpp  Framebuffer.cpp  ImageView.cpp  Pipeline.cpp  Surface.cpp  Swapchain.cpp  Synchronization.cpp  VulkanCore.cpp  VulkanKernel.cpp
Core/src/EvoVulkan/: DescriptorManager.cpp  VmaUsage.cpp  VulkanKernel.cpp
Core/src/EvoVulkan/Complexes/: FrameBufferAttachment.cpp  FrameBufferLayer.cpp  Framebuffer.cpp  Mesh.cpp  Shader.cpp
Core/src/EvoVulkan/Memory/: Allocator.cpp
Core/src/EvoVulkan/Tools/: DeviceTools.cpp  FileSystem.cpp  Singleton.cpp  VulkanDebug.cpp  VulkanTools.cpp
Core/src/EvoVulkan/Types/: CmdBuffer.cpp  CmdPool.cpp  DepthStencil.cpp  DescriptorPool.cpp  Device.cpp  FamilyQueues.cpp  Framebuffer.cpp  Image.cpp  Instance.cpp  MultisampleTarget.cpp  Surface.cpp  Swapchain.cpp  Synchronization.cpp  Texture.cpp  VmaBuffer.cpp  VulkanBuffer.cpp
Depends/cmp_core/shaders/: bc1_encode_kernel.h  bc2_encode_kernel.h  bc3_encode_kernel.h  bc4_encode_kernel.h  bc5_encode_kernel.h  bc6_encode_kernel.h  bc7_encode_kernel.cpp  bcn_common_kernel.h
Depends/inc/: tinyobjloader.h
Depends/inc/glm/detail/: type_quat.hpp
Depends/stbi/: CMakeLists.txt
Depends/stbi/inc/: stbi.h
Depends/stbi/src/: stbi.c
Resources/Shaders/: compile.bat  geometry.frag  geometry.vert  post_processing.frag  post_processing.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
UnitTests/: Example.h  Example2.h
